# Lint

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  makefile
docs/: example.li  operator_precedence.txt  reference.md
src/: grammar.c  interpreter.c  interpreter.h  lint.c  lint.h  main.c  parser.h  scanner.c  scanner.h  token.c  token.h  token_aux.h
src/ast/: grammar.c  grammar.h  grammar_init.c  grammar_init.h  grammar_types.h  parser.c  parser.h
src/execution/: eval.c  eval.h  interpreter.c  interpreter.h
src/lexer/: scanner.c  scanner.h  token.c  token.h  token_aux.c  token_table.c  token_table.h
src/parser/: expr_parser.c  expr_parser.h  expression.c  expression.h  parse_context.c  parse_context.h  parser.c  parser.h  parser_aux.c  statement.c  statement.h
src/parser_types/: expr_parser.c  expr_parser.h  parser_aux.c  parser_aux.h
src/utils/: color.c  color.h  error.c  hashmap.c  hashmap.h  string_utils.c  string_utils.h  value.c  value.h  vector.c  vector.h
tests/: suite.c  suite.h  test.c  test.h  test_literal_scanner.c  test_op_scanner.c  test_punct_scanner.c  test_string_scanner.c  test_string_utils.c  test_tokenizer.c  test_word_scanner.c
tests/ast/: test_ast.h  test_bool_expr.c  test_num_expr.c  test_type_mismatch.c
tests/execution/: test_execution.h  test_if_stmt.c
tests/misc/: test_hashmap.c  test_string_utils.c  test_utils.h  test_utils_suite.c  test_value.c
tests/parser/: test_bool_parser.c  test_complex_parser.c  test_let_parser.c  test_num_parser.c  test_parser.h  test_parser_edge_cases.c  test_unary_parser.c
(+9 files in other folders)
